# BinaryCompresser

./: CMakeLists.txt  README.md  main.cpp
utils/: compresser.cpp  compresser.h
